--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
+    "antd": "^4.24.16",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "react": "^19.0.0",
